# ESPhone

./: .gitignore  CMakeLists.txt  README.md
components/input/: CMakeLists.txt  keypad.c
components/screen/: CMakeLists.txt  screen.c
components/screen/text/: font_default.c  text.c
components/screen/ui/: event.c  symbols.c  widget.c
components/ssd1306/: CMakeLists.txt  ssd1306.c
include/input/: keypad.h  keys.h
include/screen/: screen.h
include/screen/text/: text.h
include/screen/ui/: event.h  widget.h
include/ssd1306/: ssd1306.h
main/: CMakeLists.txt  main.c
