# The following five lines of boilerplate have to be in your project's
# CMakeLists in this exact order for cmake to work correctly
cmake_minimum_required(VERSION 3.16)

include($ENV{IDF_PATH}/tools/cmake/project.cmake)
project(
    ESPhone
    LANGUAGES C
)


# add_library(
#     ssd1306
#     STATIC
#     ssd1306
# )

# add_subdirectory(ssd1306)

# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
